--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-on-rails": "12.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
